--- a/css/view.less
+++ b/css/view.less
@@ -4,11 +4,22 @@
   .cursor > table > tbody > tr {
     > .handle > .cursor-icon {
       display: table-cell;
-      background: url("../img/cursor.png") no-repeat;
       height: 18px;
       width: 18px;
       position: relative;
       left: 1px;
+    }
+  }
+
+  .cursor-up > table > tbody > tr:first-child {
+    > .handle > .cursor-icon {
+      background: url("../img/cursor.png") no-repeat;
+    }
+  }
+
+  .cursor-down > table > tbody > tr:last-child {
+    > .handle > .cursor-icon {
+      background: url("../img/cursor-down.png") no-repeat;
     }
   }
 
@@ -40,6 +51,17 @@
       margin-left: -9px;
     }
   }
+  #step-control {
+    .icon {
+      padding: 2px 10px;
+    }
+    .icon-stop-before {
+      background: url("../img/cursor.png") center center no-repeat;
+    }
+    .icon-stop-after {
+      background: url("../img/cursor-down.png") center center no-repeat;
+    }
+  }
 }
 
 .variables {
@@ -59,6 +81,9 @@
       display: inline-block;
     }
   }
+  .value-edit {
+    display: none;
+  }
 }
 
 .source {
@@ -67,9 +92,14 @@
     border: 1px solid transparent;
     .border-radius(3px);
     &.source-cursor {
-      background: darkgray url("../img/cursor.png") no-repeat;
       position: relative;
       left: 0;
+    }
+    &.cursor-up {
+      background: darkgray url("../img/cursor.png") no-repeat;
+    }
+    &.cursor-down {
+      background: darkgray url("../img/cursor-down.png") no-repeat;
     }
   }
 }
