--- a/partials/new.phtml
+++ b/partials/new.phtml
@@ -7,7 +7,7 @@ if ($__uid) {
     // create a new algorithm
     $aid = $__model->insertAlgorithm($__uid);
     // redirect to the edit-page
-    header("Location:" . url(['action' => 'edit', 'aid' => $aid]));
+    header("Location:" . url(['action' => 'edit', 'aid' => $aid], false, false));
     die();
 }
 ?>
