--- a/css/view.less
+++ b/css/view.less
@@ -87,6 +87,18 @@
 }
 
 .source {
+  .code {
+    font-family: "Courier New", monospace;
+    display: block;
+    padding: 9.5px;
+    font-size: 13px;
+    background-color: #F5F5F5;
+    border: 1px solid #CCC;
+    .border-radius(4px);
+    overflow: auto;
+    white-space: pre;
+  }
+
   .line {
     padding-left: 20px;
     border: 1px solid transparent;
