--- a/partials/headers/algorithmHeader.phtml
+++ b/partials/headers/algorithmHeader.phtml
@@ -15,10 +15,10 @@
                 </li>
             <?php else: ?>
                 <li role="presentation" class="disabled">
-                    <a href="javascript:void(0)"><?= $l10n['edit'] ?></a>
+                    <a><?= $l10n['edit'] ?></a>
                 </li>
                 <li role="presentation" class="disabled">
-                    <a href="javascript:void(0)"><?= $l10n['settings'] ?></a>
+                    <a><?= $l10n['settings'] ?></a>
                 </li>
             <?php endif ?>
         </ul>
