--- a/partials/user.phtml
+++ b/partials/user.phtml
@@ -111,7 +111,7 @@ if (isset($_GET['uid'])) {
                                        value="<?= $user->username ?>"/>
                             </div>
                             <div class="col-sm-3">
-                                <a href="javascript:void(0)" id="usernameBtn" class="btn btn-primary">
+                                <a id="usernameBtn" class="btn btn-primary">
                                     <?= $l10n['change'] ?>
                                 </a>
                             </div>
@@ -126,7 +126,7 @@ if (isset($_GET['uid'])) {
                                        value="<?= $user->email ?>"/>
                             </div>
                             <div class="col-sm-3">
-                                <a href="javascript:void(0)" id="emailBtn" class="btn btn-primary">
+                                <a id="emailBtn" class="btn btn-primary">
                                     <?= $l10n['change'] ?>
                                 </a>
                             </div>
@@ -144,7 +144,7 @@ if (isset($_GET['uid'])) {
                                        placeholder="<?= $l10n['password'] ?>">
                             </div>
                             <div class="col-sm-3">
-                                <a href="javascript:void(0)" id="passwordBtn" class="btn btn-primary">
+                                <a id="passwordBtn" class="btn btn-primary">
                                     <?= $l10n['change'] ?>
                                 </a>
                             </div>
