--- a/partials/register.phtml
+++ b/partials/register.phtml
@@ -58,8 +58,7 @@ global $l10n;
                                placeholder="<?= $l10n['password_again'] ?>">
                     </div>
                 </div>
-                <a href="javascript:void(0)" id="registerBtn" class="btn btn-primary btn-lg"
-                   data-url="<?= url(['action' => 'index']) ?>">
+                <a id="registerBtn" class="btn btn-primary btn-lg" data-url="<?= url(['action' => 'index']) ?>">
                     <?= $l10n['register'] ?>
                 </a>
                 <input name="registerBtn" style="display: none;"/>
