--- a/partials/admin.phtml
+++ b/partials/admin.phtml
@@ -14,7 +14,7 @@ if ($__uid) {
         <h1><?= $l10n['administration'] ?></h1>
     </div>
     <!-- CONTENT -->
-<?php if ($__uid && $rights): ?>
+<?php if ($rights): ?>
     <div id="adminSuccess" class="alert alert-success alert-dismissible" style="display:none">
         <button id="adminSuccessClose" type="button" class="close">
             <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
@@ -48,13 +48,9 @@ if ($__uid) {
                 <tbody>
                 <?php foreach ($__model->fetchUsers() as $member): ?>
                     <tr <?php if($member['date_deletion']): ?>class="deleted"<?php endif ?>>
-                        <td>
-                            <?php if ($member['rights'] > 0): ?>
-                                <strong title="<?= $l10n['administrator'] ?>"><?= $member['username'] ?></strong>
-                            <?php else: ?>
-                                <?= $member['username'] ?>
-                            <?php endif ?>
-                            <div style="float:right">
+                        <td class="username <?= ($member['rights'] >= 1) ? 'admin' : '' ?>">
+                            <?= $member['username'] ?>
+                            <div class="send-mail">
                                 <a href="mailto:<?= $member['email'] ?>"><span class="glyphicon glyphicon-envelope"></span></a>
                             </div>
                         </td>
@@ -64,9 +60,21 @@ if ($__uid) {
                         </td>
                         <td><?= (new DateTime($member['date_registration']))->format('Y-m-d') ?></td>
                         <td><?= (new DateTime($member['date_lastsignin']))->format('Y-m-d') ?></td>
-                        <td>
+                        <td class="active-only">
                             <a href="<?= url(['action' => 'user', 'uid' => $member['uid']]) ?>" title="<?= $l10n['view_profile'] ?></th>"><span class="fa fa-user"></span></a>
-                            <a class="delete-user" data-uid="<?= $member['uid'] ?>" data-warning="<?= $l10n['confirm_delete_user'] ?>" title="<?= $l10n['delete_user'] ?>"><span class="fa fa-trash-o"></span></a>
+                            <?php if ($member['uid'] !== $__uid): ?>
+                                <a class="delete-user" data-uid="<?= $member['uid'] ?>" data-warning="<?= $l10n['confirm_delete_user'] ?>" title="<?= $l10n['delete_user'] ?>"><span class="fa fa-trash"></span></a>
+                                <?php if ($rights === 2): ?>
+                                    <a class="adminify-user" data-uid="<?= $member['uid'] ?>" title="<?= $l10n['user_to_admin'] ?>"><span class="fa fa-key"></span></a>
+                                <?php endif ?>
+                            <?php else: ?>
+                                <span class="fa fa-trash text-muted"></span>
+                                <span class="fa fa-key text-muted"></span>
+                            <?php endif ?>
+                        </td>
+                        <td class="deleted-only">
+                            <a class="un-delete-user" data-uid="<?= $member['uid'] ?>" title="<?= $l10n['resurrect_user'] ?>"><span class="fa fa-heart"></span></a>
+                            <a class="erase-user" data-uid="<?= $member['uid'] ?>" data-warning="<?= $l10n['confirm_erase_user'] ?>" title="<?= $l10n['erase_user'] ?>"><span class="fa fa-minus-circle text-danger"></span></a>
                         </td>
                     </tr>
                 <?php endforeach ?>
